# sysopy8

./: README.md
zad1/: CMakeLists.txt  gen.py  main.c
zad2/: main.c
